removed pom dependencies